# rust_phonetic

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  wrangler.toml
pkg/: all_in_one_phonetic.d.ts  all_in_one_phonetic.js  all_in_one_phonetic_bg.wasm.d.ts  package.json
src/: index.js  main.rs
