[package]
name = "all_in_one_phonetic"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
